- Added a check for possible existing token in api2
- Added option for deleting old api tokens (over one month) in maintenance
- Fixed email account activation not working
- Fixed issue about toggling blocks twice (#1382)
- Fixed profile page not keeping custom avatar
- Tests info in excel export of lesson reports no longer truncates questions
- You can no longer create subforums in locked forums

=== Version 3.6.9 build 10697 ===
- Fixed subforum/topics count in forums list
- Fixed personal profile fields appearing even if meaningless
- Fixed mapped accounts disregarding system setting
- Fixed clicking on icons including a link with popups, does not load the popup
- Fixed resume test
- Fixed language options appearing when creating a new user, even if single language is set
- Added option to hide parts of organizational chart that are not related to a user (Enterprise edition)

=== Version 3.6.9 build 10653 ===
- Updated personal pages
- Added "modern" theme and set it as default theme
- Dates formatting is no longer system-dependent
- Updated custom user profile
- Messages are no longer passed as GET parameters
- Debug mode can now be set per user
- Added "keep best" option in tests
- Allow wildcards in "fill in the gaps" question types
- Allow variable text-box sizes in "empty spaces" questions
- Added select box option in empty spaces questions
- Added option for showing correct answers only if student passed the test
- Added autocomplete="off" for empty space questions to prevent browser from showing the previous answers
- Added "test password" option in tests (Educational/Enterprise editions)
- Resolved memory overuse in lesson reports when having many completed tests
- Updating test score now sets/unsets unit progress
- Added option for compressing test results in database
- Added course prerequisites (course access depends on another course's completion) 
- Changed course certificate expiration calculations to be more accurate (#1225)